# component-hollows

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
examples/test-app/: README.md  sdkconfig
examples/test-app/main/: idf_component.yml  main.c
include/: firefly-demos.h  firefly-hollows.h
src/: build-defs.h  config.h  device-info.c  hollows.c  hollows.h  panel-info.c  panel.c  task-ble.c  task-io.c  utils.c  utils.h
src/demo/: background-pixies.c  panel-test.c
